rsandrc/ingress9/ingressrule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: Ingress
    annotations: 
            nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
   -host:
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: npci 
             port:
              number: 80
       - path: /tomcat
         pathType: Prefix
         backend:
           service:
             name: tpci 
             port:
              number: 8080
